--- a/spawners.ipynb
+++ b/spawners.ipynb
@@ -434,21 +434,10 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'default' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-10cacd0f39fd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mDemoFormSpawner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLocalProcessSpawner\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0mdefault\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'options_form'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_options_form\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mdefault_env\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"YOURNAME=%s\\n\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         return \"\"\"\n",
-      "\u001b[1;32m<ipython-input-4-10cacd0f39fd>\u001b[0m in \u001b[0;36mDemoFormSpawner\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mclass\u001b[0m \u001b[0mDemoFormSpawner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLocalProcessSpawner\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;33m@\u001b[0m\u001b[0mdefault\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'options_form'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_options_form\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m         \u001b[0mdefault_env\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"YOURNAME=%s\\n\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         return \"\"\"\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'default' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from traitlets import default\n",
+    "\n",
     "class DemoFormSpawner(LocalProcessSpawner):\n",
     "    @default('options_form')\n",
     "    def _options_form(self):\n",
@@ -493,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -504,11 +493,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mSignature: \u001b[0m\u001b[0mDockerSpawner\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra_create_kwargs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra_start_kwargs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra_host_config\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mSource:\u001b[0m\n",
+      "    \u001b[1;33m@\u001b[0m\u001b[0mgen\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcoroutine\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m    \u001b[1;32mdef\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra_create_kwargs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mextra_start_kwargs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextra_host_config\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;34m\"\"\"Start the single-user server in a docker container. You can override\u001b[0m\n",
+      "\u001b[1;34m        the default parameters passed to `create_container` through the\u001b[0m\n",
+      "\u001b[1;34m        `extra_create_kwargs` dictionary and passed to `start` through the\u001b[0m\n",
+      "\u001b[1;34m        `extra_start_kwargs` dictionary.  You can also override the\u001b[0m\n",
+      "\u001b[1;34m        'host_config' parameter passed to `create_container` through the\u001b[0m\n",
+      "\u001b[1;34m        `extra_host_config` dictionary.\u001b[0m\n",
+      "\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;34m        Per-instance `extra_create_kwargs`, `extra_start_kwargs`, and\u001b[0m\n",
+      "\u001b[1;34m        `extra_host_config` take precedence over their global counterparts.\u001b[0m\n",
+      "\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;34m        \"\"\"\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mcontainer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32myield\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_container\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;32mif\u001b[0m \u001b[0mcontainer\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimage\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_image\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;31m# build the dictionary of keyword arguments for create_container\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mcreate_kwargs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mimage\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mimage\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0menvironment\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_env\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mvolumes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvolume_mount_points\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mcreate_kwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextra_create_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;32mif\u001b[0m \u001b[0mextra_create_kwargs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mcreate_kwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mextra_create_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;31m# build the dictionary of keyword arguments for host_config\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mhost_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbinds\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvolume_binds\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlinks\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinks\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muse_internal_ip\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mhost_config\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'port_bindings'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;36m8888\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_ip\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mhost_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextra_host_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;32mif\u001b[0m \u001b[0mextra_host_config\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mhost_config\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mextra_host_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdebug\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Starting host with config: %s\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mhost_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mhost_config\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclient\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate_host_config\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mhost_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mcreate_kwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetdefault\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'host_config'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhost_config\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;31m# create the container\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mresp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32myield\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdocker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'create_container'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mcreate_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_id\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Id'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[1;34m\"Created container '%s' (id: %s) from image %s\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_id\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[1;34m\"Found existing container '%s' (id: %s)\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m                \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_id\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;31m# TODO: handle unpause\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[1;34m\"Starting container '%s' (id: %s)\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_id\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;31m# build the dictionary of keyword arguments for start\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mstart_kwargs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mstart_kwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mextra_start_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;32mif\u001b[0m \u001b[0mextra_start_kwargs\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m            \u001b[0mstart_kwargs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mextra_start_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;31m# start the container\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[1;32myield\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdocker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'start'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcontainer_id\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mstart_kwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mip\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mport\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32myield\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_ip_and_port\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mserver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mip\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mip\u001b[0m\u001b[1;33m\u001b[0m\n",
+      "\u001b[1;33m\u001b[0m        \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mserver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mport\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mport\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\n",
+      "\u001b[1;31mFile:      \u001b[0m~/conda/envs/jupyterhub-tutorial/lib/python3.5/site-packages/dockerspawner/dockerspawner.py\n",
+      "\u001b[1;31mType:      \u001b[0mfunction\n"
+     ]
+    }
+   ],
    "source": [
     "DockerSpawner.start??"
    ]
