Add title to rest-api nb

--- a/docs/rest-api.ipynb
+++ b/docs/rest-api.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# JupyterHub's API\n",
+    "\n",
     "JupyterHub has a [REST API](http://petstore.swagger.io/?url=https://raw.githubusercontent.com/jupyterhub/jupyterhub/master/docs/rest-api.yml#!/default/get_users):"
    ]
   },
